Fixed alignment of images and completed intro page, cropped Chris Gansen image to be a square

--- a/kunesh-gansen/stylesheet.css
+++ b/kunesh-gansen/stylesheet.css
@@ -33,25 +33,47 @@ body, html {
 
 .introduction h1 {
     color:#dddddd;
+    display: block;
     text-align: center;
     font-family: 'Denk One', sans-serif;
-    font-size: 50px;
-    padding-top: 60px;
+    font-size: 60px;
+    padding-top: 300px;
+}
+
+.introduction h3 {
+    font-family: 'Inconsolata', sans-serif;
+    font-weight: bold;
+}
+
+.kunesheintroimgtext {
+    display:inline-block;
+    padding-top: 110px;
+    margin-left: -160px;
+}
+
+.gansenintroimgtext {
+    float:right;
+    margin-right: -170px;
+    padding-top: 110px;
+}
+
+.introudction h3:nth-child(even) {
+    display: inline-block;
+    padding-top: 100px;
+    margin-right:-100px;
 }
 
 .introduction img {
     height:200px;
-    position:relative;
+    margin-top: -100px;
 }
 
 .introduction .jason_kunesh_img {
-    top:50px;
-    left:0;
+    float:left;
 }
 
 .introduction .chris_gansen_img {
-    top:50px;
-    right:0;
+    float:right;
 }
 
 /*DESCRIPTION*/
